--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -1,8 +1,8 @@
 name: learn-github-actions
 run-name: ${{ github.actor }} is learning GitHub Actions
-on: push
+on: workflow_dispatch
 jobs:
   check-directory-files-and-folders:
     runs-on: self-hosted
     steps:
-      - run: ls -la
+      - run: ls
