--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -1,7 +1,7 @@
 name: learn-github-actions
 run-name: ${{ github.actor }} is learning GitHub Actions
 on: 
-  workflow_dispatch:
+  workflow_dispatch
 jobs:
   check-directory-files-and-folders:
     runs-on: self-hosted
