--- a/.github/workflows/terraform-workflow.yml
+++ b/.github/workflows/terraform-workflow.yml
@@ -1,9 +1,22 @@
 name: terraform
-run-name: terraform
 on: 
   workflow_dispatch
+env:
+# Credentials for deployment to AWS
+ AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
+ AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_KEY }}
 jobs:
-  terraform-version:
+  terraform:
     runs-on: self-hosted
+    defaults:
+      run:
+        working-directory: ./single-az-instance
     steps:
-      - run: terraform -v
+      - name: version
+        run: terraform -v
+      - name: initialize
+        run: terraform init
+      - name: validate
+        run: terraform validate
+      - name: plan
+        run: terraform plan
