--- a/.github/workflows/terraform-workflow.yml
+++ b/.github/workflows/terraform-workflow.yml
@@ -21,7 +21,7 @@ jobs:
     runs-on: self-hosted
     defaults:
       run:
-        working-directory: ./${{inputs.rds_deployment}}
+        working-directory: ${{inputs.rds_deployment}}
     steps:
       - name: version
         run: terraform -v
