--- a/.github/workflows/terraform-workflow.yml
+++ b/.github/workflows/terraform-workflow.yml
@@ -21,8 +21,10 @@ jobs:
     runs-on: self-hosted
     defaults:
       run:
-        working-directory: ${{inputs.rds_deployment}}
+        working-directory: ./${{inputs.rds_deployment}}
     steps:
+      - name: checkout repo
+        uses: actions/checkout@v1
       - name: version
         run: terraform -v
       - name: initialize
