--- a/.github/workflows/terraform-workflow.yml
+++ b/.github/workflows/terraform-workflow.yml
@@ -1,9 +1,46 @@
 name: terraform
-run-name: terraform
-on: 
-  workflow_dispatch
+on:
+  workflow_dispatch:
+    inputs:
+      rds_deployment:
+        description: 'Choose the RDS deployment option.'
+        required: true
+        default: ''
+        type: choice
+        options:
+          - test-module
+          - single-az-instance
+          - multi-az-instance
+          - multi-az-db-cluster
+      apply_changes:
+        description: 'Apply changes to AWS?'
+        required: true
+        default: 'YES'
+        type: choice
+        options:
+          - NO
+          - YES
+env:
+# Credentials for deployment to AWS
+ AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
+ AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_KEY }}
 jobs:
-  terraform-version:
+  terraform:
     runs-on: self-hosted
+    defaults:
+      run:
+        working-directory: ./${{inputs.rds_deployment}}
     steps:
-      - run: terraform -v
+      - name: checkout repo
+        uses: actions/checkout@v1
+      - name: check terraform version
+        run: terraform -v
+      - name: run terraform init
+        run: terraform init
+      - name: run terraform validate
+        run: terraform validate
+      - name: run terraform plan
+        run: terraform plan
+      - name: run terraform apply
+        if: ${{inputs.apply_changes}} == 'YES'
+        run: terraform apply -auto-approve
